--- a/Views/Home/SelectEmployee.cshtml
+++ b/Views/Home/SelectEmployee.cshtml
@@ -1,62 +1,65 @@
-﻿﻿@using kuaforBerberOtomasyon.Models.Entities
-@model Tuple<List<WorkingHours>, int>
+﻿@model Tuple<List<SelectListItem>, List<SelectListItem>>
 
 @{
-    ViewData["Title"] = "Randevu Saati Seç";
+    ViewData["Title"] = "Randevu Al";
 }
 
-<script>
-    function selectCard(cardId, cardDate) {
-        var selectedCard = document.querySelector(".card.selected");
-        if (selectedCard) {
-            selectedCard.classList.remove("selected");
-        }
-
-        var card = document.getElementById(cardId);
-        card.classList.add("selected");
-
-        var hiddenInput = document.getElementById("selectedCardId");
-        hiddenInput.value = cardId;
-
-        var dateInput = document.getElementById("selectedCardDate");
-        dateInput.value = cardDate;
-    }
-</script>
-
-<style>
-    .card.selected {
-        background-color: lightblue;
-    }
-</style>
-
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <h3>Randevu Saatleri</h3>
-
-        @if (Model == null)
-        {
-            <p>@ViewBag.Mesaj</p>
-        }
-        else
-        {
-            <form asp-action="CreateAppointment" asp-controller="Home" method="post">
-                <input type="hidden" name="employeeId" value="@Model.Item2" />
-                <input type="hidden" id="selectedCardId" name="selectedCardId" value="" />
-                <input type="hidden" id="selectedCardDate" name="selectedCardDate" value="" />
-
-                @foreach (var calismaSaati in Model.Item1)
-                {
-                    <div id="card_@calismaSaati.Id" class="card mb-3" onclick="selectCard('card_@calismaSaati.Id', '@calismaSaati.WorkingHour.ToString("yyyy-MM-ddTHH:mm:ss")')">
-                        <div class="card-body">
-                            <h5 class="card-title">@calismaSaati.WorkingHour.ToString("dd.MM.yyyy HH:mm:ss")</h5>
-                        </div>
-                    </div>
-                }
-
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary">Randevu Oluştur</button>
-                </div>
-            </form>
-        }
+@using (Html.BeginForm("CreateAppointment", "Home", FormMethod.Post))
+{
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="mb-3">
+                <label for="service" class="form-label">Hizmet Seç</label>
+                @Html.DropDownList("serviceId", Model.Item1, "-- Seçiniz --", new { @class = "form-control" })
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-primary">Hizmet Seç</button>
+            </div>
+        </div>
     </div>
-</div>
+}
+
+@if (Model.Item2 != null && Model.Item2.Count > 0)
+{
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-6">
+            <h3>Çalışanlar</h3>
+            @foreach (var employee in Model.Item2)
+            {
+                <div class="card text-center mb-2">
+                    <div class="card-body">
+                        <h5 class="card-title">@employee.Text</h5>
+                        <a class="btn btn-primary" asp-controller="Home" asp-action="SelectEmployee" asp-route-id="@employee.Value" asp-route-serviceId="@Model.Item1.FirstOrDefault()?.Value">Seç</a>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+}
+else
+{
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-6">
+            <p>Bu hizmet için uygun çalışan bulunmamaktadır.</p>
+        </div>
+    </div>
+}
+
+@if (Model.Item1 != null && Model.Item1.Count > 0)
+{
+    <form asp-action="CreateAppointment" asp-controller="Home" method="post">
+        <input type="hidden" name="employeeId" value="@Model.Item2.FirstOrDefault()?.Value" />
+        <input type="hidden" name="serviceId" value="@Model.Item1.FirstOrDefault()?.Value" />
+
+        <!-- Tarih ve Saat Seçici -->
+        <div class="mb-3">
+            <label for="dateTimePicker" class="form-label">Randevu Tarihi ve Saati Seç</label>
+            <input type="datetime-local" id="dateTimePicker" class="form-control" name="selectedCardDate" />
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary">Randevu Oluştur</button>
+        </div>
+    </form>
+
+}
