--- a/Views/Shared/AdminLayout.cshtml
+++ b/Views/Shared/AdminLayout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Employees">Çalışanları Yönet</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Appointments">Randevular</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Randevu">Randevular</a>
                         </li>
                         
                     </ul>
