--- a/Views/Admin/Randevu.cshtml
+++ b/Views/Admin/Randevu.cshtml
@@ -1,6 +1,8 @@
 ﻿﻿@using kuaforBerberOtomasyon.Models.Entities
 @model List<Appointment>
-
+@{
+    Layout = "~/Views/Shared/AdminLayout.cshtml";
+}
 
 <table class="table">
     <thead class="thead-light">
@@ -8,6 +10,7 @@
             <th scope="col">Çalışan Adı</th>
             <th scope="col">Müşteri Adı</th>
             <th scope="col">Randevu Zamanı</th>
+            <th scope="col">Randevu Onayı</th>
             <th scope="col">Randevuyu Sil</th>
         </tr>
     </thead>
@@ -18,9 +21,13 @@
                 <td>@item.EmployeeName</td>
                 <td>@item.FirstName</td>
                 <td>@item.LastName</td>
+                <td>@item.IsApproved</td>
                 <td>@item.RandevuSaati</td>
                 <td>
-                    <a class="btn btn-danger" asp-area="" asp-controller="Admin" asp-action="RandevuSil" asp-route-id="@item.Id">Sil</a>
+                    <a class="btn btn-danger" asp-area="" asp-controller="Admin" asp-action="ApproveAppointments" asp-route-id="@item.Id">Randevu Onayla</a>
+                </td>
+                <td>
+                    <a class="btn btn-danger" asp-area="" asp-controller="Admin" asp-action="DeleteAppointment" asp-route-id="@item.Id">Sil</a>
                 </td>
             </tr>
         }
