--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <header class="jumbotron text-center text-blue py-5">
-    <h1 class="display-4"><strong>Kuaför ve Berber Otomasyon</strong></h1>
+    <h1 class="display-4"><strong>Kuaför </strong></h1>
     <p class="lead">Sizlere en iyi hizmeti sunmak için buradayız.</p>
 </header>
 
