--- a/Views/Admin/Employees.cshtml
+++ b/Views/Admin/Employees.cshtml
@@ -13,7 +13,7 @@
             <th scope="col">ID</th>
             <th scope="col">Ad Soyad</th>
             <th scope="col">Verdiği Hizmet</th>
-            <th scope="col">Çalışma Saati Atama</th>
+            <th scope="col">Güncelle</th>
             <th scope="col">Sil</th>
         </tr>
     </thead>
@@ -39,11 +39,6 @@
                     }
                 </td>
 
-                <td>
-                    <a class="btn btn-secondary" asp-area="" asp-controller="Admin" asp-action="CreateEmployeeWorking" asp-route-id="@item.EmployeeId">
-                        Çalışma Saati Atama
-                    </a>
-                </td>
                 <td>
                     <a class="btn btn-warning" asp-area="" asp-controller="Admin" asp-action="UpdateEmployee" asp-route-id="@item.EmployeeId">
                         Güncelle
