--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -1,10 +1,32 @@
 ﻿@model kuaforBerberOtomasyon.Models.DTO.RegisterViewModel
 
-<h1>Kayıt Ol</h1>
-<form asp-action="Register" asp-controller="Home" method="post">
-    <input type="text" name="FirstName" placeholder="Ad" required />
-    <input type="text" name="LastName" placeholder="Soyad" required />
-    <input type="email" name="Email" placeholder="E-posta" required />
-    <input type="password" name="Password" placeholder="Şifre" required />
-    <button type="submit">Kaydol</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h1 class="text-center mb-4">Kayıt Ol</h1>
+                    <form asp-action="Register" asp-controller="Home" method="post">
+                        <div class="form-group mb-3">
+                            <label for="FirstName">Ad</label>
+                            <input type="text" name="FirstName" id="FirstName" class="form-control" placeholder="Ad" required />
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="LastName">Soyad</label>
+                            <input type="text" name="LastName" id="LastName" class="form-control" placeholder="Soyad" required />
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="Email">E-posta</label>
+                            <input type="email" name="Email" id="Email" class="form-control" placeholder="E-posta" required />
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="Password">Şifre</label>
+                            <input type="password" name="Password" id="Password" class="form-control" placeholder="Şifre" required />
+                        </div>
+                        <button type="submit" class="btn btn-success w-100">Kaydol</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
