front end düzenleme

--- a/Views/Admin/AddEmployee.cshtml
+++ b/Views/Admin/AddEmployee.cshtml
@@ -5,7 +5,7 @@
 @{
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
-<h2>Add Employee</h2>
+<h2>Çalışan Ekle</h2>
 
 <form asp-action="AddEmployee" method="post">
   
